gs-solution/application/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gs-service-api
spec:
  selector:
    app: gs-service
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 8081
